--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!--========================
          Header Main section start
         =============================-->
-        <section class="container">
+        <section class="container my-5">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -140,6 +140,155 @@
          Header Main section end 
         =============================-->
     </Header>
+    <!--========================
+         Main section Start
+        =============================-->
+    <main class="container my-5">
+        <!--========================
+         Popular Courses Section start
+        =============================-->
+        <div class="container text-center w-75 my-5">
+            <h1 class="fs-1 fw-bold my-3">New Approaches to Enhance Our Poplar Courses </h1>
+            <p class="fs-4">Hundreds of courses designed to help educators worldwide strengthen teaching strategies,
+                delivery methods
+                and learning activities.</p>
+        </div>
+        <!--========================
+         Popular Courses card Section start
+        =============================-->
+        <div class="container border border-danger">
+            <div class="row gx-2 border ">
+                <div class="card col-md-12 col-lg-6 border border-danger p-0 ">
+                    <div class="row g-0">
+                        <div class="col-md-5 col-sm-12  ">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                        </div>
+                        <div class="col-md-7 col-sm-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-md-12 col-lg-6 p-0">
+                    <div class="row g-0">
+                        <div class="col-md-5 col-sm-12 ">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                        </div>
+                        <div class="col-md-7 col-sm-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-md-12 col-lg-6 p-0">
+                    <div class="row g-0">
+                        <div class="col-md-5 col-sm-12 ">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                        </div>
+                        <div class="col-md-7 col-sm-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-md-12 col-lg-6 p-0">
+                    <div class="row g-0">
+                        <div class="col-md-5 col-sm-12 ">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                        </div>
+                        <div class="col-md-7 col-sm-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-md-12 col-lg-6 p-0">
+                    <div class="row g-0">
+                        <div class="col-md-5 col-sm-12 ">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                        </div>
+                        <div class="col-md-7 col-sm-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-md-12 col-lg-6 p-0">
+                    <div class="row g-0">
+                        <div class="col-md-5 col-sm-12 ">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
+                        </div>
+                        <div class="col-md-7 col-sm-12">
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center m-5">
+            <p class="head-par btn btn-primary text-center">See More Courses </p>
+        </div>
+        <!--========================
+         Popular Courses card Section end
+        =============================-->
+        <!--========================
+         Rating Section start
+        =============================-->
+        <section>
+            <div>
+                <img src="images/working.png" alt="">
+            </div>
+            <div>
+                <h1>Explore The elearning Institute</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.
+
+                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet
+                    tend to repeat predefined. </p>
+
+            </div>
+
+        </section>
+
+        <!--========================
+         Rating Section end
+        =============================-->
+
+
+
+
+    </main>
+
+
+    <!--========================
+         Main section end
+        =============================-->
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
