--- a/index.html
+++ b/index.html
@@ -273,24 +273,27 @@
                     alteration in some form, by injected humour, or randomised words which don't look even slightly
                     believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.
 
-                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet
+                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                    Internet
                     tend to repeat predefined. </p>
+
                 <div class="d-flex">
-                    <div class="p-3">
+                    <div class="p-md-3 px-sm-1">
                         <h1>3.2K+</h1>
                         <p>Online Course</p>
                     </div>
 
-                    <div class="p-3">
+                    <div class="p-md-3 px-sm-1">
                         <h1>600+</h1>
                         <p>Expert Member</p>
                     </div>
 
-                    <div class="p-3">
+                    <div class="p-md-3 px-sm-1">
                         <h1>1K+</h1>
                         <p>Rating & Review</p>
                     </div>
                 </div>
+
                 <button type="button" class="btn btn-primary fs-2" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">
                     Read More
@@ -305,8 +308,9 @@
         =============================-->
         <section class="row bg-primary my-5 py-5 rounded text-white align-items-center">
             <div class="col-md-6 col-sm-12 p-5">
-                <h1>Ready to join?</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                <h1>Want to be matched with Technical Training programs?</h1>
+                <p class="mt-3">It is a long established fact that a reader will be distracted by the readable content
+                    of a page when
                     looking at its layout</p>
             </div>
             <div class="col-md-6 col-sm-12 d-flex justify-content-center">
@@ -338,7 +342,62 @@
             </div>
         </section>
 
-
+        <!--========================
+         Ready to join section end
+        =============================-->
+        <!--========================
+         Successful Student Section
+        =============================-->
+        <section>
+            <h1>CHECK OUT Successful Students</h1>
+            <p class="fs-4">To earn your degree or certificate as an international student, you have your choice of all
+                the top
+                schools, colleges and universities in the USA that specialize in the best Technical Training programs.
+            </p>
+            <div class="row g-3 my-5">
+                <div class="col-sm-12 col-md-6 col-lg-3 mx-auto">
+                    <div>
+                        <img src="images/student/student-1.png" class="img-float w-100" alt="">
+                    </div>
+                    <div class="m-3">
+                        <h3>Awlad Hossain</h3>
+                        <p>UIUX Designer</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3 mx-auto">
+                    <div>
+                        <img src="images/student/student-2.png" class="img-float w-100" alt="">
+                    </div>
+                    <div class="m-3">
+                        <h3>Jannatul Islam</h3>
+                        <p>Motion Design</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3 mx-auto">
+                    <div>
+                        <img src="images/student/student-3.png" class="img-float w-100" alt="">
+                    </div>
+                    <div class="m-3">
+                        <h3>Imran Hossain</h3>
+                        <p>Graphic Designer</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3 mx-auto">
+                    <div>
+                        <img src="images/student/student-4.png" class="img-float w-100" alt="">
+                    </div>
+                    <div class="m-3">
+                        <h3>Nishi Akter</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center m-5">
+                <button type="button" class="btn btn-primary fs-2" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    See More
+                </button>
+        </section>
 
 
     </main>
