--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
          Custom Css link 
         =============================-->
     <link rel="stylesheet" href="style.css">
+    <!--========================
+         Font Awesome Link 
+        =============================-->
+    <script src="https://kit.fontawesome.com/7040e220ec.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -349,7 +353,7 @@
          Successful Student Section
         =============================-->
         <section>
-            <h1>CHECK OUT Successful Students</h1>
+            <h1>Check Out Our Successful Students</h1>
             <p class="fs-4">To earn your degree or certificate as an international student, you have your choice of all
                 the top
                 schools, colleges and universities in the USA that specialize in the best Technical Training programs.
@@ -397,7 +401,117 @@
                     data-bs-target="#exampleModal">
                     See More
                 </button>
+            </div>
         </section>
+        <!--========================
+         Successful Student Section End
+        =============================-->
+        <!--========================
+         Student Feedback Section Start
+        =============================-->
+        <section>
+            <div class="row justify-content-center m-5">
+                <div class="col-md-6 col-sm-12">
+                    <h1>Some Students Feedback</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout</p>
+                </div>
+            </div>
+            <div>
+                <div class="row position-relative border border-danger">
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="card-body px-5">
+                                <div class="d-flex justify-content-between">
+                                    <div>
+                                        <img src="images/comma.png" alt="">
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-secondary"></i>
+                                    </div>
+                                </div>
+
+                                <p class="card-text">Quality education has the power to change lives. But for many,
+                                    choices and circumstance have put the education and training they need beyond reach.
+                                    In order to eliminate these barriers, POWER TEC EDU Online Training Center connects
+                                    people across to 12 EOCs and 35 ATTAIN labs.</p>
+                                <div class="d-flex">
+                                    <div>
+                                        <img src="images/student/student-5.png" alt="">
+                                    </div>
+                                    <div class="px-3">
+                                        <h5>Awlad Hossain</h5>
+                                        <p>UI Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="card-body px-5">
+                                <div class="d-flex justify-content-between">
+                                    <div>
+                                        <img src="images/comma.png" alt="">
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-secondary"></i>
+                                    </div>
+                                </div>
+
+                                <p class="card-text">Quality education has the power to change lives. But for many,
+                                    choices and circumstance have put the education and training they need beyond reach.
+                                    In order to eliminate these barriers, POWER TEC EDU Online Training Center connects
+                                    people across to 12 EOCs and 35 ATTAIN labs.</p>
+                                <div class="d-flex ">
+                                    <div>
+                                        <img src="images/student/student-6.png" alt="">
+                                    </div>
+                                    <div class="px-3">
+                                        <h5>Shanta Akter</h5>
+                                        <p>Graphic Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-0 d-none d-lg-block">
+                        <button class="position-absolute top-50 border border-0 bg-white ">
+                            <i class="fa-solid fa-circle-chevron-left fs-1 text-info "></i>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+
+                        <button class="position-absolute top-50 end-0 border border-0 bg-white ">
+                            <i class="fa-solid fa-circle-chevron-right fs-1 text-info" aria-hidden="true"></i>
+                            <span class="visually-hidden">next</span>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="d-flex justify-content-center m-5">
+                    <button type="button" class="btn btn-primary fs-2 d-lg-none d-md-block" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        See More
+                    </button>
+                </div>
+            </div>
+        </section>
+
+
+        <!--========================
+         Student Feedback Section End
+        =============================-->
 
 
     </main>
