--- a/index.html
+++ b/index.html
@@ -627,14 +627,69 @@
         <!--========================
         Frequently Ask Question End
         =============================-->
-
-
+        <!--========================
+        Trusted Company Section Start
+        =============================-->
+        <section class="my-5 d-none d-lg-block">
+            <h1 class="text-center fs-1 fw-bold">Trusted by over 800+ companies</h1>
+            <div class="d-flex justify-content-around my-5">
+                <div>
+                    <img src="images/company/company-1.png" alt="">
+                </div>
+                <div>
+                    <img src="images/company/company-2.png" alt="">
+                </div>
+                <div>
+                    <img src="images/company/company-3.png" alt="">
+                </div>
+                <div>
+                    <img src="images/company/company-4.png" alt="">
+                </div>
+                <div>
+                    <img src="images/company/company-5.png" alt="">
+                </div>
+                <div>
+                    <img src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!--========================
+       Trusted Company Section End
+        =============================-->
     </main>
 
 
     <!--========================
          Main section end
         =============================-->
+    <!--========================
+         Footer section Start
+        =============================-->
+    <footer>
+        <div class="text-center bg-secondary text-white">
+            <h1>POWER TEC EDU</h1>
+            <p>Better, Faster and Safer Experience</p>
+            <hr>
+            <div>
+                <h2>Following Us</h2>
+                <p class="social-icon">
+                    <a target="_blank" href="https://www.facebook.com/"> <i
+                            class="fa-brands fa-facebook fs-1 text-white"></i></a>
+                    <a target="_blank" href="https://www.youtube.com/"> <i
+                            class="fa-brands fa-youtube fs-1 text-white"></i></a>
+                    <a target="_blank" href="https://twitter.com/"> <i
+                            class="fa-brands fa-twitter-square fs-1 text-white"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/"> <i
+                            class="fa-brands fa-instagram fs-1 text-white"></i></a>
+                </p>
+
+            </div>
+        </div>
+    </footer>
+    <!--========================
+        Footer section end
+        =============================-->
+
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
