--- a/index.html
+++ b/index.html
@@ -90,40 +90,38 @@
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
+
+                    <div class="carousel-item active" data-bs-interval="2000">
                         <div class="img-overlay "></div>
-                        <img src="images/cover/cover-1.png" class="carousel-img d-block w-100" alt="...">
-                        <div class="carousel-caption d-block text-white carousel-text pb-5">
-                            <h1 class="fw-bold">Expanded Learning Opportunities</h1>
-                            <p class="head-par">It expanded learning opportunities for Students many new things from
-                                digital tools and technology.</p>
-                            <button type="button" class="btn btn-primary fs-2" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal">
-                                Get Started
-                            </button>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <div class="img-overlay "></div>
-                        <img src="images/cover/cover-2.jpg" class="carousel-img d-block w-100" alt="...">
-                        <div class="carousel-caption d-block text-white carousel-text pb-5">
-                            <h1 class="fw-bold">Make Students Self-Motivated</h1>
-                            <p class="head-par">The digital learning permits students to better connect with a good
+                        <img src="images/cover/cover-2.jpg" class="carousel-img d-block img-fluid w-100 h-100"
+                            alt="...">
+                        <div class="carousel-caption d-block text-white carousel-text">
+                            <h1>Make Students Self-Motivated</h1>
+                            <p>The digital learning permits students to better connect with a good
                                 context, a greater sense of potential.</p>
                             <p class="head-par btn btn-primary">Get
                                 Started </p>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="2000">
                         <div class="img-overlay "></div>
-                        <img src="images/cover/cover-3.jpg" class="carousel-img d-block w-100" alt="...">
-                        <div class="carousel-caption d-block text-white carousel-text pb-5">
-                            <h1 class="fw-bold">Get Started Digital Learning</h1>
-                            <p class="head-par">It is a long established fact that a reader will be distracted
-                                by the
-                                readable
-                                content of
-                                a page when looking at its layout.</p>
+                        <img src="images/cover/cover-3.jpg" class="carousel-img d-block img-fluid w-100 h-100"
+                            alt="...">
+                        <div class="carousel-caption d-block text-white carousel-text">
+                            <h1>Make Students Self-Motivated</h1>
+                            <p>The digital learning permits students to better connect with a good
+                                context, a greater sense of potential.</p>
+                            <p class="head-par btn btn-primary">Get
+                                Started </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <div class="img-overlay "></div>
+                        <img src="images/cover/pioneers-of-education-1.jpg" class="carousel-img img-fluid" alt="...">
+                        <div class="carousel-caption d-block text-white carousel-text">
+                            <h1>Make Students Self-Motivated</h1>
+                            <p>The digital learning permits students to better connect with a good
+                                context, a greater sense of potential.</p>
                             <p class="head-par btn btn-primary">Get
                                 Started </p>
                         </div>
@@ -153,114 +151,126 @@
         <!--========================
          Popular Courses Section start
         =============================-->
-        <div class="container text-center w-75 my-5">
-            <h1 class="fs-1 fw-bold my-3">New Approaches to Enhance Our Poplar Courses </h1>
-            <p class="fs-4">Hundreds of courses designed to help educators worldwide strengthen teaching strategies,
-                delivery methods
-                and learning activities.</p>
-        </div>
-        <!--========================
+        <section>
+            <div class="container text-center w-75 my-5">
+                <h1 class="fs-1 fw-bold my-3">New Approaches to Enhance Our Poplar Courses </h1>
+                <p class="fs-4">Hundreds of courses designed to help educators worldwide strengthen teaching strategies,
+                    delivery methods
+                    and learning activities.</p>
+            </div>
+            <!--========================
          Popular Courses card Section start
         =============================-->
-        <div class="container">
-            <div class="row gx-2 border ">
-                <div class="card col-md-12 col-lg-6 p-0 ">
-                    <div class="row g-0">
-                        <div class="col-md-5 col-sm-12  ">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
-                        </div>
-                        <div class="col-md-7 col-sm-12">
-                            <div class="card-body">
-                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
-                                <p class="text-danger fs-3">Price:10,000 tk</p>
+            <div>
+                <div class="row gy-3">
+
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="d-md-flex">
+                                <div class="w-100">
+                                    <img src="images/course/course-2.png" class="img-fluid w-100 h-100 " alt="">
+                                </div>
+                                <div class="card-body ms-3">
+                                    <h5 class="card-title fw-bold">JavaScript Basic to sadvanced</h5>
+                                    <p class="card-text">JavaScript is the world's most popular programming language of
+                                        the
+                                        Web.</p>
+                                    <P class="fs-3 fw-bold text-danger"> Price: TK 10,000</P>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="card col-md-12 col-lg-6 p-0">
-                    <div class="row g-0">
-                        <div class="col-md-5 col-sm-12 ">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
-                        </div>
-                        <div class="col-md-7 col-sm-12">
-                            <div class="card-body">
-                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
-                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="d-md-flex">
+                                <div class="w-100">
+                                    <img src="images/course/course-3.png" class="img-fluid w-100 h-100 " alt="">
+                                </div>
+                                <div class="card-body ms-3 d-block">
+                                    <h5 class="card-title fw-bold">Fullstack Web Development</h5>
+                                    <p class="card-text">Web design and development is an umbrella term that describes
+                                        the
+                                        process of creating a website.</p>
+                                    <P class="fs-3 fw-bold text-danger"> Price: TK 10,000</P>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="card col-md-12 col-lg-6 p-0">
-                    <div class="row g-0">
-                        <div class="col-md-5 col-sm-12 ">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
-                        </div>
-                        <div class="col-md-7 col-sm-12">
-                            <div class="card-body">
-                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
-                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="d-md-flex">
+                                <div class="w-100">
+                                    <img src="images/course/course-4.png" class="img-fluid w-100 h-100 " alt="">
+                                </div>
+                                <div class="card-body ms-3 d-block">
+                                    <h5 class="card-title fw-bold">Digital Marketing</h5>
+                                    <p class="card-text">Digital marketing, also called online marketing, refers to all
+                                        marketing efforts</p>
+                                    <P class="fs-3 fw-bold text-danger"> Price: TK 10,000</P>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="card col-md-12 col-lg-6 p-0">
-                    <div class="row g-0">
-                        <div class="col-md-5 col-sm-12 ">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
-                        </div>
-                        <div class="col-md-7 col-sm-12">
-                            <div class="card-body">
-                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
-                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="d-md-flex">
+                                <div class="w-100">
+                                    <img src="images/course/course-5.png" class="img-fluid w-100 h-100 " alt="">
+                                </div>
+                                <div class="card-body ms-3 d-block">
+                                    <h5 class="card-title fw-bold">Photography Basic Rules</h5>
+                                    <p class="card-text">Photography is the art of capturing light with a camera,
+                                        usually
+                                        via a digital sensor or film, to create an image.</p>
+                                    <P class="fs-3 fw-bold text-danger"> Price: TK 10,000</P>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="card col-md-12 col-lg-6 p-0">
-                    <div class="row g-0">
-                        <div class="col-md-5 col-sm-12 ">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
-                        </div>
-                        <div class="col-md-7 col-sm-12">
-                            <div class="card-body">
-                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
-                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="d-md-flex">
+                                <div class="w-100">
+                                    <img src="images/course/course-1.png" class="img-fluid w-100 h-100 " alt="">
+                                </div>
+                                <div class="card-body ms-3 d-block">
+                                    <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text">The UI/UX Design Specialization brings a design-centric
+                                        approach to
+                                        user interface and user experience design</p>
+                                    <P class="fs-3 fw-bold text-danger"> Price: TK 10,000</P>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="card col-md-12 col-lg-6 p-0">
-                    <div class="row g-0">
-                        <div class="col-md-5 col-sm-12 ">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100" alt="...">
-                        </div>
-                        <div class="col-md-7 col-sm-12">
-                            <div class="card-body">
-                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
-                                <p class="text-danger fs-3">Price:10,000 tk</p>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card">
+                            <div class="d-md-flex">
+                                <div class="w-100">
+                                    <img src="images/course/course-6.png" class="img-fluid w-100 h-100 " alt="">
+                                </div>
+                                <div class="card-body ms-3 d-block">
+                                    <h5 class="card-title fw-bold">Motion Graphics</h5>
+                                    <p class="card-text">Motion graphics (sometimes mograph) are pieces of animation or
+                                        digital footage which create the illusion of motion or rotation</p>
+                                    <P class="fs-3 fw-bold text-danger"> Price: TK 10,000</P>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="d-flex justify-content-center m-5">
-            <button type="button" class="btn btn-primary fs-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                See More Courses
-            </button>
-        </div>
+
+
+            <div class="d-flex justify-content-center m-5">
+                <button type="button" class="btn btn-primary fs-2" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    See More Courses
+                </button>
+            </div>
+
+
+        </section>
         <!--========================
          Popular Courses card Section end
         =============================-->
@@ -311,13 +321,13 @@
          Ready to join
         =============================-->
         <section class="row bg-primary my-5 py-5 rounded text-white align-items-center">
-            <div class="col-md-6 col-sm-12 p-5">
+            <div class="col-md-12 col-lg-6 p-5">
                 <h1>Want to be matched with Technical Training programs?</h1>
                 <p class="mt-3">It is a long established fact that a reader will be distracted by the readable content
                     of a page when
                     looking at its layout</p>
             </div>
-            <div class="col-md-6 col-sm-12 d-flex justify-content-center">
+            <div class="col-ls-6 col-md-12 d-flex justify-content-center">
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-light fs-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Register
@@ -329,12 +339,12 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <h5 class="modal-title text-black" id="exampleModalLabel">Thanks For Register</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
-                            <div class="modal-body">
-                                ...
+                            <div class="modal-body text-black">
+                                <h1>Go to our Registration Form to Join with us.</h1>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -689,8 +699,6 @@
     <!--========================
         Footer section end
         =============================-->
-
-    <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
